--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "type": "module",
   "scripts": {
-    "1":"node src/main.js"
+    "1": "node src/main.js",
+    "2": "node src/eee.js"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "discord.js": "^14.11.0",
-    "dotenv": "^16.1.4"
+    "dotenv": "^16.1.4",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6"
   }
 }
